--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Intents</string>
 
-    <string name="editTextHint">Name</string>
+    <string name="editTextHint">Please write your name here</string>
     <string name="buttonText">Go to Second Activity</string>
 </resources>
